MAPR-HBASE-173: HBase doesn't start on core 6.2.0 with Java11